[gd_scene load_steps=10 format=3 uid="uid://crv23qyeek0lx"]

[ext_resource type="Script" uid="uid://btefbfjhrskrr" path="res://scripts/game.gd" id="1_yqjtg"]
[ext_resource type="PackedScene" uid="uid://we0qh31mh4ob" path="res://scenes/ui/DialogBox.tscn" id="3_lbhrr"]
[ext_resource type="PackedScene" uid="uid://bfovatv4sv4ou" path="res://scenes/world/world_map.tscn" id="3_lnu2h"]
[ext_resource type="PackedScene" uid="uid://742pqeb1s6s7" path="res://scenes/quests/quest_test/QuestItem.tscn" id="4_iywne"]
[ext_resource type="Texture2D" uid="uid://c36anu74d1y13" path="res://assets/character/crosshair001.png" id="4_p57ef"]
[ext_resource type="Script" uid="uid://cndmtjn4est1w" path="res://scripts/crosshair.gd" id="4_u5sy4"]
[ext_resource type="PackedScene" uid="uid://cyhwyyaw67eue" path="res://scenes/npcs/NPC.tscn" id="6_p57ef"]

[sub_resource type="FontVariation" id="FontVariation_lnu2h"]

[sub_resource type="FontVariation" id="FontVariation_lbhrr"]

[node name="Game" type="Node3D"]
script = ExtResource("1_yqjtg")

[node name="WorldMap" parent="." instance=ExtResource("3_lnu2h")]
transform = Transform3D(1.19249e-08, 0, -1, 0, 1, 0, 1, 0, 1.19249e-08, 13.642, 0, 0)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MultiplayerHUD" type="Control" parent="CanvasLayer"]
unique_name_in_owner = true
layout_mode = 3
anchor_left = 0.104
anchor_top = 0.035
anchor_right = 0.104
anchor_bottom = 0.035
offset_left = -233.808
offset_top = 27.32
offset_right = -133.808
offset_bottom = 97.32

[node name="Panel" type="Panel" parent="CanvasLayer/MultiplayerHUD"]
layout_mode = 1
anchors_preset = -1
anchor_left = 2.01
anchor_top = -0.071
anchor_right = 3.01
anchor_bottom = 1.0
offset_top = -0.0299997
offset_right = -3.05176e-05
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MultiplayerHUD/Panel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="HostGame" type="Button" parent="CanvasLayer/MultiplayerHUD/Panel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = SubResource("FontVariation_lnu2h")
theme_override_font_sizes/font_size = 15
text = "Host Game"

[node name="JoinGame" type="Button" parent="CanvasLayer/MultiplayerHUD/Panel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = SubResource("FontVariation_lbhrr")
theme_override_font_sizes/font_size = 15
text = "Join Game"

[node name="DialogBox" parent="CanvasLayer" instance=ExtResource("3_lbhrr")]

[node name="Crosshair" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("4_u5sy4")

[node name="cross" type="TextureRect" parent="CanvasLayer/Crosshair"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.0
offset_top = -32.0
offset_right = 32.0
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_p57ef")

[node name="Overworld_Camera" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.587785, 0.809017, 0, -0.809017, 0.587785, -0.748367, 18.5339, 25.7287)

[node name="Players" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 12.3837, 0)

[node name="QuestItem" parent="." instance=ExtResource("4_iywne")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 8.25237, 2.10121, 0)

[node name="NPC" parent="." instance=ExtResource("6_p57ef")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 11.9732, 0.285527, -11.2136)

[connection signal="pressed" from="CanvasLayer/MultiplayerHUD/Panel/VBoxContainer/HostGame" to="." method="become_host"]
[connection signal="pressed" from="CanvasLayer/MultiplayerHUD/Panel/VBoxContainer/JoinGame" to="." method="join_game"]

[editable path="CanvasLayer/DialogBox"]
